<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ShutterSide" Id="{e52b5303-1e77-4663-89b3-65730e490f44}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
(****************** {attribute 'strict'} *)(* Want to treat them as integer constants*)
TYPE ShutterSide :
(
	PLUSX, (* The +X side.*)
	MINUSX (* The -X side.*)
)INT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>